--- a/src/main/resources/templates/fragments/languages.html
+++ b/src/main/resources/templates/fragments/languages.html
@@ -71,4 +71,7 @@
          <a class="dropdown-item lang_dropdown-item" href="" data-bs-language-code="hi_IN">
             <img src="images/flags/in.svg" alt="icon" width="20" height="15"> हिन्दी
         </a>
+	<a class="dropdown-item lang_dropdown-item" href="" data-bs-language-code="ur_PK">
+            <img src="images/flags/pk.svg" alt="icon" width="20" height="15"> हिन्दी
+        </a>
 </th:block>
