--- a/src/main/resources/templates/fragments/languages.html
+++ b/src/main/resources/templates/fragments/languages.html
@@ -69,6 +69,6 @@
              <img src="images/flags/hu.svg" alt="icon" width="20" height="15"> Hungarian
          </a>
          <a class="dropdown-item lang_dropdown-item" href="" data-bs-language-code="hi_IN">
-            <img src="images/flags/in.svg" alt="icon" width="20" height="15"> हिन्दी
+            <img src="images/flags/in.svg" alt="icon" width="20" height="15"> اردو
         </a>
 </th:block>
